# ChangeLog for dev-dotnet/glade-sharp
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/glade-sharp/ChangeLog,v 1.58 2008/03/12 13:46:10 phreak Exp $

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Peter Johanson (latexer, #206688) from metadata.xml.

  30 Apr 2007; Roy Marples <uberlord@gentoo.org> glade-sharp-2.10.0.ebuild:
  Added ~x86-fbsd keyword.

  13 Apr 2007; Petteri Räty <betelgeuse@gentoo.org>
  -glade-sharp-1.0.8-r1.ebuild, -glade-sharp-2.4.0.ebuild,
  -glade-sharp-2.4.2.ebuild, -glade-sharp-2.8.0.ebuild:
  Remove old versions.

  03 Mar 2007; Luis Medinas <metalgod@gentoo.org> glade-sharp-2.10.0.ebuild:
  Stable on amd64.

  14 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  glade-sharp-2.10.0.ebuild:
  Keyworded ~sparc

  11 Feb 2007; Lars Weiler <pylon@gentoo.org> glade-sharp-2.10.0.ebuild:
  Stable on ppc; bug #164048.

  29 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  glade-sharp-2.10.0.ebuild:
  stable x86; bug #164048

  18 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  glade-sharp-2.8.2.ebuild:
  stable x86, bug #153308

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  glade-sharp-2.8.2.ebuild:
  ppc stable

*glade-sharp-2.10.0 (07 Sep 2006)

  07 Sep 2006; Peter Johanson <latexer@gentoo.org>
  +glade-sharp-2.10.0.ebuild:
  Bump.

  23 Jul 2006; Olivier Crête <tester@gentoo.org> glade-sharp-2.8.2.ebuild:
  Stable on amd64

  17 Jul 2006; Daniel Gryniewicz <dang@gentoo.org> glade-sharp-2.8.0.ebuild:
  Marked stable on amd64 for bug #139612

  14 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  glade-sharp-2.8.0.ebuild:
  ppc stable, bug #139612

  12 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  glade-sharp-2.8.0.ebuild:
  Stable on x86 wrt bug #139612.

  20 Mar 2006; Luis Medinas <metalgod@gentoo.org> glade-sharp-1.0.10.ebuild:
  Stable on amd64.

*glade-sharp-2.8.2 (16 Mar 2006)
*glade-sharp-2.4.2 (16 Mar 2006)
