@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/glade-sharp/Attic/glade-sharp-1.0.10.ebuild,v 1.4 2006/03/20 00:20:00 metalgod Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/glade-sharp/Attic/glade-sharp-1.0.10.ebuild,v 1.5 2008/05/30 23:10:33 jurek Exp $
 
 inherit gtk-sharp-component
 
@@ -10,4 +10,5 @@ IUSE=""
 
 DEPEND="${DEPEND}
 		=dev-dotnet/gtk-sharp-${PV}*
-		>=gnome-base/libglade-2"
+		>=gnome-base/libglade-2
+		dev-util/pkgconfig"
