@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/glade-sharp/Attic/glade-sharp-2.8.2.ebuild,v 1.4 2007/01/18 12:11:33 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/glade-sharp/Attic/glade-sharp-2.8.2.ebuild,v 1.5 2008/05/30 23:10:33 jurek Exp $
 
 inherit gtk-sharp-component
 
@@ -8,7 +8,9 @@ SLOT="2"
 KEYWORDS="amd64 ppc x86"
 IUSE=""
 
-DEPEND="${DEPEND} >=gnome-base/libglade-2.3.6"
+DEPEND="${DEPEND}
+		>=gnome-base/libglade-2.3.6
+		dev-util/pkgconfig"
 
 GTK_SHARP_COMPONENT_SLOT="2"
 GTK_SHARP_COMPONENT_SLOT_DEC="-2.0"
